--- a/app/views/hot_reads/index.html.erb
+++ b/app/views/hot_reads/index.html.erb
@@ -1,5 +1,5 @@
-<% n = 1; @links.each do %>
+<% n = 1; @links.each do |link| %>
 <div class="link">
-    <h3><%= n %>.  <a href=" <%= link.url %>"></a> </h3><br>
+    <h3><%= n %>.  <a href="<%= link.URL %>"> <%= link.URL %>     </a> </h3><br>
 </div>
 <% end %>
