--- a/app/views/hot_reads/index.html.erb
+++ b/app/views/hot_reads/index.html.erb
@@ -1,5 +1,6 @@
+<h1>TOO HOt!</h1>
 <% n = 1; @links.each do |link| %>
 <div class="link">
     <h3><%= n %>.  <a href="<%= link.URL %>"> <%= link.URL %>     </a> </h3><br>
 </div>
-<% end %>
+<% n += 1; end %>
